--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="./show.js"></script>
+    <script
+      src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script
+      src="https://www.gstatic.com/firebasejs/9.1.3/firebase-database.js"></script>
   </body>
 </html>
