--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <script type="module" src="/src/main.jsx"></script>
     <script src="./show.js"></script>
     <script
-      src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+      src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
     <script
-      src="https://www.gstatic.com/firebasejs/9.1.3/firebase-database.js"></script>
+      src="https://www.gstatic.com/firebasejs/8.3.1/firebase-database.js"></script>
+    <script src="firebaseIni.js"></script>
   </body>
 </html>
